--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Esawar</string>
+    <string name="facebook_app_id">956460459011592</string>
+
+
 </resources>
